Source/Alternet.UI.Pal/Api/TreeView.Api.h

using namespace Alternet::UI;
ALTERNET_UI_API void TreeView_SetShowLines_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetShowLines(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetShowRootLines_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetShowRootLines();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetShowRootLines_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetShowRootLines(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetShowExpandButtons_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetShowExpandButtons();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetShowExpandButtons_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetShowExpandButtons(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_GetTopItem_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetTopItem();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetFullRowSelect_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetFullRowSelect();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetFullRowSelect_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetFullRowSelect(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_GetAllowLabelEdit_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->GetAllowLabelEdit();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetAllowLabelEdit_(TreeView* obj, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetAllowLabelEdit(value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_OpenSelectedItemsArray_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->OpenSelectedItemsArray();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int TreeView_GetSelectedItemsItemCount_(TreeView* obj, void* array)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetSelectedItemsItemCount(array);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_GetSelectedItemsItemAt_(TreeView* obj, void* array, int index)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetSelectedItemsItemAt(array, index);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_CloseSelectedItemsArray_(TreeView* obj, void* array)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CloseSelectedItemsArray(array);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemBold_(void* handle, void* item, c_bool bold)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        TreeView::SetItemBold(handle, item, bold);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API Color_C TreeView_GetItemTextColor_(void* handle, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<Color_C>([&](){
    #endif
        return TreeView::GetItemTextColor(handle, item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API Color_C TreeView_GetItemBackgroundColor_(void* handle, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<Color_C>([&](){
    #endif
        return TreeView::GetItemBackgroundColor(handle, item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemTextColor_(void* handle, void* item, Color color)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        TreeView::SetItemTextColor(handle, item, color);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemBackgroundColor_(void* handle, void* item, Color color)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        TreeView::SetItemBackgroundColor(handle, item, color);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ResetItemTextColor_(void* handle, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        TreeView::ResetItemTextColor(handle, item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ResetItemBackgroundColor_(void* handle, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        TreeView::ResetItemBackgroundColor(handle, item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetNodeUniqueId_(TreeView* obj, void* node, int64_t uniqueId)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetNodeUniqueId(node, uniqueId);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int64_t TreeView_GetNodeUniqueId_(TreeView* obj, void* node)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int64_t>([&](){
    #endif
        return obj->GetNodeUniqueId(node);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_MakeAsListBox_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->MakeAsListBox();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int TreeView_GetItemCount_(TreeView* obj, void* parentItem)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetItemCount(parentItem);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_InsertItem_(TreeView* obj, void* parentItem, void* insertAfter, const char16_t* text, int imageIndex, c_bool parentIsExpanded)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->InsertItem(parentItem, insertAfter, text, imageIndex, parentIsExpanded);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_RemoveItem_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->RemoveItem(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ClearItems_(TreeView* obj, void* parentItem)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ClearItems(parentItem);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ClearSelected_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ClearSelected();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetSelected_(TreeView* obj, void* item, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetSelected(item, value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_DeleteAllItems_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->DeleteAllItems();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ExpandAll_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ExpandAll();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_CollapseAll_(TreeView* obj)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CollapseAll();
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_ItemHitTest_(TreeView* obj, PointD point)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->ItemHitTest(point);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API TreeViewHitTestLocations TreeView_GetHitTestResultLocations_(TreeView* obj, void* hitTestResult)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<TreeViewHitTestLocations>([&](){
    #endif
        return obj->GetHitTestResultLocations(hitTestResult);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void* TreeView_GetHitTestResultItem_(TreeView* obj, void* hitTestResult)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<void*>([&](){
    #endif
        return obj->GetHitTestResultItem(hitTestResult);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_FreeHitTestResult_(TreeView* obj, void* hitTestResult)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->FreeHitTestResult(hitTestResult);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_IsItemSelected_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsItemSelected(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetFocused_(TreeView* obj, void* item, c_bool value)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetFocused(item, value);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API c_bool TreeView_IsItemFocused_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<c_bool>([&](){
    #endif
        return obj->IsItemFocused(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemText_(TreeView* obj, void* item, const char16_t* text)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetItemText(item, text);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API char16_t* TreeView_GetItemText_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<char16_t*>([&](){
    #endif
        return AllocPInvokeReturnString(obj->GetItemText(item));
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_SetItemImageIndex_(TreeView* obj, void* item, int imageIndex)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->SetItemImageIndex(item, imageIndex);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API int TreeView_GetItemImageIndex_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    return MarshalExceptions<int>([&](){
    #endif
        return obj->GetItemImageIndex(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_BeginLabelEdit_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->BeginLabelEdit(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_EndLabelEdit_(TreeView* obj, void* item, c_bool cancel)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->EndLabelEdit(item, cancel);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ExpandItem_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ExpandItem(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_CollapseItem_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CollapseItem(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ExpandAllChildren_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ExpandAllChildren(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_CollapseAllChildren_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->CollapseAllChildren(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_EnsureVisible_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->EnsureVisible(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}
ALTERNET_UI_API void TreeView_ScrollIntoView_(TreeView* obj, void* item)
{
    #if !defined(__WXMSW__) || defined(_DEBUG)
    MarshalExceptions<void>([&](){
    #endif
        obj->ScrollIntoView(item);
    #if !defined(__WXMSW__) || defined(_DEBUG)
    });
    #endif
}